test/goldens/integration/ghc-9.2/getqq_missing_key.golden

/test/wont-compile/GetMissingKey.hs:16:1: error:
    • Key 'missing' does not exist in the following schema:
      '[ '( 'Data.Aeson.Schema.Key.NormalKey "foo",
            'Data.Aeson.Schema.Type.SchemaScalar Bool)]
    • When checking the inferred type
        result :: Data.Aeson.Schema.Internal.SchemaResult (TypeError ...)
   |
16 | result = [get| o.missing |]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
